--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,6 +15,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div to-include="../components/spinner/spinner.html"></div>
+  <div class="contact-spinner" to-include="../components/spinner/spinner.html"></div>
+  <h3>Still for implement, work in progress!</h3>
 </body>
 </html>
