--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../styles/all.min.css" />
   <link rel="stylesheet" type="text/css" href="../styles/common.css" />
   <link rel="stylesheet" type="text/css" href="../components/spinner/spinner.css" />
   <link rel="stylesheet" type="text/css" href="../styles/contact.css" />
   <link rel="stylesheet" type="text/css" href="../styles/commonMedia.css" />
-  <script src="https://kit.fontawesome.com/ad5f5fba54.js" crossorigin="anonymous"></script>
   <script src="../scripts/utilities.js"></script>
   <script src="../scripts/common.js"></script>
   <script src="../scripts/contact.js"></script>
