--- a/pages/products.html
+++ b/pages/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../styles/all.min.css" />
     <link rel="stylesheet" type="text/css" href="../styles/common.css" />
     <link rel="stylesheet" type="text/css" href="../components/header/header.css"/>
     <link rel="stylesheet" type="text/css" href="../components/nav-bar/nav-bar.css"/>
@@ -11,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="../components/footer/footer.css"/>
     <link rel="stylesheet" type="text/css" href="../styles/products.css" />
     <link rel="stylesheet" type="text/css" href="../styles/commonMedia.css" />
-    <script src="https://kit.fontawesome.com/ad5f5fba54.js" crossorigin="anonymous"></script>
     <script src="../scripts/utilities.js"></script>
     <script src="../scripts/common.js"></script>
     <script src="../components/header/header.js"></script>
