added pages titles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="./components/nav-bar/nav-bar.js"></script>
     <script src="./components/footer/footer.js"></script>
     <script src="main.js"></script>
-    <title>Document</title>
+    <title>Beer Products</title>
   </head>
   <body>
     <div class="wrapper">
