--- a/pages/products.html
+++ b/pages/products.html
@@ -19,7 +19,7 @@
     <script src="../components/modal/modal.js"></script>
     <script src="../components/footer/footer.js"></script>
     <script src="../scripts/products.js"></script>
-    <title>Document</title>
+    <title>Beer Products - Products</title>
   </head>
   <body>
     <header to-include="../components/header/header.html"></header>
