--- a/pages/services.html
+++ b/pages/services.html
@@ -17,7 +17,7 @@
   <script src="../components/nav-bar/nav-bar.js"></script>
   <script src="../components/footer/footer.js"></script>
   <script src="../scripts/services.js"></script>
-  <title>Document</title>
+  <title>Beer Products - Services</title>
 </head>
 <body>
   <header to-include="../components/header/header.html"></header>
