--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
   <script src="../components/nav-bar/nav-bar.js"></script>
   <script src="../components/footer/footer.js"></script>
   <script src="../scripts/about.js"></script>
-  <title>Document</title>
+  <title>Beer Products - About</title>
 </head>
 <body>
   <header to-include="../components/header/header.html"></header>
