--- a/pages/beerDetails.html
+++ b/pages/beerDetails.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/common.css" />
     <link rel="stylesheet" type="text/css" href="../styles/beerDetails.css" />
     <script src="../scripts/beerDetails.js"></script>
-    <title>Document</title>
+    <title>Beer Products - Details</title>
   </head>
   <body>
     <div class="wrapper">
