--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
   <script src="../scripts/utilities.js"></script>
   <script src="../scripts/common.js"></script>
   <script src="../scripts/contact.js"></script>
-  <title>Document</title>
+  <title>Beer Products -Contact</title>
 </head>
 <body>
   <div class="contact-spinner" to-include="../components/spinner/spinner.html"></div>
