--- a/pages/help.html
+++ b/pages/help.html
@@ -12,7 +12,7 @@
   <script src="../scripts/utilities.js"></script>
   <script src="../scripts/common.js"></script>
   <script src="../scripts/help.js"></script>
-  <title>Document</title>
+  <title>Beer Products - Help</title>
 </head>
 <body>
   <h3>Still for implement, work in progress!</h3>
