--- a/index.html
+++ b/index.html
@@ -4,32 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./styles/all.min.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/common.css" />
-    <link rel="stylesheet" type="text/css" href="./components/header/header.css"/>
-    <link rel="stylesheet" type="text/css" href="./components/nav-bar/nav-bar.css"/>
-    <link rel="stylesheet" type="text/css" href="./components/carousel-description/carousel-description.css"/>
-    <link rel="stylesheet" type="text/css" href="./components/spinner/spinner.css"/>
-    <link rel="stylesheet" type="text/css" href="./components/footer/footer.css"/>
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/commonMedia.css" />
-    <script src="./scripts/utilities.js"></script>
-    <script src="./scripts/common.js"></script>
-    <script src="./components/carousel-description/carousel-description.js"></script>
-    <script src="./components/header/header.js"></script>
-    <script src="./components/nav-bar/nav-bar.js"></script>
-    <script src="./components/footer/footer.js"></script>
-    <script src="main.js"></script>
     <title>Beer Products</title>
+    <link rel="stylesheet" type="text/css" href="/styles/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/common.css" />
+    <link rel="stylesheet" type="text/css" href="/components/header/header.css"/>
+    <link rel="stylesheet" type="text/css" href="/components/nav-bar/nav-bar.css"/>
+    <link rel="stylesheet" type="text/css" href="/components/carousel-description/carousel-description.css"/>
+    <link rel="stylesheet" type="text/css" href="/components/spinner/spinner.css"/>
+    <link rel="stylesheet" type="text/css" href="/components/footer/footer.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/commonMedia.css" />
+    <script type="module" src="main.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
-      <header to-include="./components/header/header.html"></header>
-      <div to-include="./components/nav-bar/nav-bar.html"></div>
-      <div class="spinner-include" to-include="./components/spinner/spinner.html"></div>
+      <header to-include="/components/header/header.html"></header>
+      <div to-include="/components/nav-bar/nav-bar.html"></div>
+      <div class="spinner-include" to-include="/components/spinner/spinner.html"></div>
       <div class="carousel-wrapper">
         <h2>NUESTRAS CERVEZAS</h2>
-        <div class="carousel-include display-none" to-include="./components/carousel-description/carousel-description.html"></div>
+        <div class="carousel-include display-none" to-include="/components/carousel-description/carousel-description.html"></div>
       </div>
       <section class="section-info display-none">
         <p>
@@ -38,7 +32,7 @@
           calidad y con un sabor que te hará sentir una experiencia única e inigualable
         </p>
       </section>
-      <div class="footer-include display-none" to-include="./components/footer/footer.html"></div>
+      <div class="footer-include display-none" to-include="/components/footer/footer.html"></div>
     </div>
   </body>
 </html> 
