--- a/pages/about.html
+++ b/pages/about.html
@@ -4,36 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../styles/all.min.css" />
-  <link rel="stylesheet" type="text/css" href="../styles/common.css" />
-  <link rel="stylesheet" type="text/css" href="../components/header/header.css"/>
-  <link rel="stylesheet" type="text/css" href="../components/nav-bar/nav-bar.css"/>
-  <link rel="stylesheet" type="text/css" href="../components/spinner/spinner.css"/>
-  <link rel="stylesheet" type="text/css" href="../components/footer/footer.css"/>
-  <link rel="stylesheet" type="text/css" href="../styles/about.css"/>
-  <link rel="stylesheet" type="text/css" href="../styles/commonMedia.css" />
-  <script src="../scripts/utilities.js"></script>
-  <script src="../scripts/common.js"></script>
-  <script src="../components/header/header.js"></script>
-  <script src="../components/nav-bar/nav-bar.js"></script>
-  <script src="../components/footer/footer.js"></script>
-  <script src="../scripts/about.js"></script>
   <title>Beer Products - About</title>
+  <link rel="stylesheet" type="text/css" href="/styles/all.min.css" />
+  <link rel="stylesheet" type="text/css" href="/styles/common.css" />
+  <link rel="stylesheet" type="text/css" href="/components/header/header.css"/>
+  <link rel="stylesheet" type="text/css" href="/components/nav-bar/nav-bar.css"/>
+  <link rel="stylesheet" type="text/css" href="/components/spinner/spinner.css"/>
+  <link rel="stylesheet" type="text/css" href="/components/footer/footer.css"/>
+  <link rel="stylesheet" type="text/css" href="/styles/about.css"/>
+  <link rel="stylesheet" type="text/css" href="/styles/commonMedia.css" />
+  <script type="module" src="/scripts/about.js" defer></script>
 </head>
 <body>
-  <header to-include="../components/header/header.html"></header>
-  <div to-include="../components/nav-bar/nav-bar.html"></div>
+  <header to-include="/components/header/header.html"></header>
+  <div to-include="/components/nav-bar/nav-bar.html"></div>
   <div class="wrapper">
     <h2>NOSOTROS</h2>
     <div class="about-container"></div>
   </div>
-  <div to-include="../components/footer/footer.html"></div>
+  <div to-include="/components/footer/footer.html"></div>
 
   <template id="about-card-template">
     <div class="about-card">
       <div class="about-card-wrapper">
         <div class="about-card-img">
-          <div class="about-spinner" to-include="../components/spinner/spinner.html"></div>
+          <div class="about-spinner" to-include="/components/spinner/spinner.html"></div>
           <img src="" alt="imagen">
         </div>
         <div class="about-card-caption"></div>
