modified link routes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beer Products -Contact</title>
-  <link rel="stylesheet" type="text/css" href="/styles/all.min.css" />
-  <link rel="stylesheet" type="text/css" href="/styles/common.css" />
-  <link rel="stylesheet" type="text/css" href="/components/spinner/spinner.css" />
-  <link rel="stylesheet" type="text/css" href="/styles/contact.css" />
-  <link rel="stylesheet" type="text/css" href="/styles/commonMedia.css" />
-  <script type="module" src="/scripts/contact.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="../styles/all.min.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/common.css" />
+  <link rel="stylesheet" type="text/css" href="../components/spinner/spinner.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/contact.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/commonMedia.css" />
+  <script type="module" src="../scripts/contact.js" defer></script>
 </head>
 <body>
-  <div class="contact-spinner" to-include="/components/spinner/spinner.html"></div>
+  <div class="contact-spinner" to-include="../components/spinner/spinner.html"></div>
   <h3>Still for implement, work in progress!</h3>
 </body>
 </html>
