--- a/pages/products.html
+++ b/pages/products.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beer Products - Products</title>
-    <link rel="stylesheet" type="text/css" href="/styles/all.min.css" />
-    <link rel="stylesheet" type="text/css" href="/styles/common.css" />
-    <link rel="stylesheet" type="text/css" href="/components/header/header.css"/>
-    <link rel="stylesheet" type="text/css" href="/components/nav-bar/nav-bar.css"/>
-    <link rel="stylesheet" type="text/css" href="/components/modal/modal.css"/>
-    <link rel="stylesheet" type="text/css" href="/components/footer/footer.css"/>
-    <link rel="stylesheet" type="text/css" href="/styles/products.css" />
-    <link rel="stylesheet" type="text/css" href="/styles/commonMedia.css" />
-    <script type="module" src="/scripts/products.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="../styles/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/common.css" />
+    <link rel="stylesheet" type="text/css" href="../components/header/header.css"/>
+    <link rel="stylesheet" type="text/css" href="../components/nav-bar/nav-bar.css"/>
+    <link rel="stylesheet" type="text/css" href="../components/modal/modal.css"/>
+    <link rel="stylesheet" type="text/css" href="../components/footer/footer.css"/>
+    <link rel="stylesheet" type="text/css" href="../styles/products.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/commonMedia.css" />
+    <script type="module" src="../scripts/products.js" defer></script>
   </head>
   <body>
-    <header to-include="/components/header/header.html"></header>
-    <div to-include="/components/nav-bar/nav-bar.html"></div>
+    <header to-include="../components/header/header.html"></header>
+    <div to-include="../components/nav-bar/nav-bar.html"></div>
     <div class="wrapper"></div>
-    <div to-include="/components/footer/footer.html"></div>
-    <div to-include="/components/modal/modal.html"></div>
+    <div to-include="../components/footer/footer.html"></div>
+    <div to-include="../components/modal/modal.html"></div>
 
     <template id="beer-card-tamplate">
       <div class="beer-card">
