--- a/pages/beerDetails.html
+++ b/pages/beerDetails.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beer Products - Details</title>
-    <link rel="stylesheet" type="text/css" href="/styles/common.css" />
-    <link rel="stylesheet" type="text/css" href="/styles/beerDetails.css" />
-    <script src="/scripts/beerDetails.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="../styles/common.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/beerDetails.css" />
+    <script src="../scripts/beerDetails.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
