--- a/pages/help.html
+++ b/pages/help.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beer Products - Help</title>
-  <link rel="stylesheet" type="text/css" href="/styles/all.min.css">
-  <link rel="stylesheet" type="text/css" href="/styles/common.css">
-  <link rel="stylesheet" type="text/css" href="/components/spinner/spinner.css">
-  <link rel="stylesheet" type="text/css" href="/styles/help.css">
-  <link rel="stylesheet" type="text/css" href="/styles/commonMedia.css">
-  <script type="module" src="/scripts/help.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="../styles/all.min.css">
+  <link rel="stylesheet" type="text/css" href="../styles/common.css">
+  <link rel="stylesheet" type="text/css" href="../components/spinner/spinner.css">
+  <link rel="stylesheet" type="text/css" href="../styles/help.css">
+  <link rel="stylesheet" type="text/css" href="../styles/commonMedia.css">
+  <script type="module" src="../scripts/help.js" defer></script>
 </head>
 <body>
   <h3>Still for implement, work in progress!</h3>
-  <div to-include="/components/spinner/spinner.html"></div>
+  <div to-include="../components/spinner/spinner.html"></div>
 </body>
 </html>
