--- a/pages/services.html
+++ b/pages/services.html
@@ -5,18 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beer Products - Services</title>
-  <link rel="stylesheet" type="text/css" href="/styles/all.min.css" />
-  <link rel="stylesheet" type="text/css" href="/styles/common.css" />
-  <link rel="stylesheet" type="text/css" href="/components/header/header.css">
-  <link rel="stylesheet" type="text/css" href="/components/nav-bar/nav-bar.css">
-  <link rel="stylesheet" type="text/css" href="/components/footer/footer.css">
-  <link rel="stylesheet" type="text/css" href="/styles/services.css">
-  <link rel="stylesheet" type="text/css" href="/styles/commonMedia.css" />
-  <script type="module" src="/scripts/services.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="../styles/all.min.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/common.css" />
+  <link rel="stylesheet" type="text/css" href="../components/header/header.css">
+  <link rel="stylesheet" type="text/css" href="../components/nav-bar/nav-bar.css">
+  <link rel="stylesheet" type="text/css" href="../components/footer/footer.css">
+  <link rel="stylesheet" type="text/css" href="../styles/services.css">
+  <link rel="stylesheet" type="text/css" href="../styles/commonMedia.css" />
+  <script type="module" src="../scripts/services.js" defer></script>
 </head>
 <body>
-  <header to-include="/components/header/header.html"></header>
-  <div to-include="/components/nav-bar/nav-bar.html"></div>
+  <header to-include="../components/header/header.html"></header>
+  <div to-include="../components/nav-bar/nav-bar.html"></div>
   <div class="wrapper">
     <section class="service-one">
       <h3>TU PEDIDO A DOMICILIO</h3>
@@ -34,6 +34,6 @@
       Tenetur quaerat sunt nihil fugiat corrupti! Saepe consectetur nesciunt earum reprehenderit nam, atque corporis dolore quidem illum accusamus ipsa, ad, vel repellendus eveniet. Distinctio, dolorem pariatur. Repudiandae nam inventore numquam!</p>
     </section>
   </div>
-  <div to-include="/components/footer/footer.html"></div>
+  <div to-include="../components/footer/footer.html"></div>
 </body>
 </html>
